--- a/css/header.css
+++ b/css/header.css
@@ -85,13 +85,39 @@ nav button {
 }
 
 @media (max-width: 820px) {
-    header nav ul, header nav a {
-        display: none;
+    #menu-list {
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 0rem;
+        top: 7rem;
+        right: 0rem;
+        background-color: var(--brand-green);
+        z-index: 1000;
+        transition: .6s;
+        visibility: hidden;
+        overflow-y: hidden;
+    }
+    .logo-header {
+        width: 12rem;
+    }
+    #nav.active #menu-list{
+        height: calc(100vh - 7rem);
+        visibility: visible;
+        overflow-y: auto;
     }
     header nav .menu-mobile {
         display: inline;
     }
-    .logo-header {
-        width: 12rem;
+    #menu-list li {
+        padding: 1rem 0;
+        margin: 0 1rem;
+        border-bottom: 1px solid var(--brand-green-light);
+    }
+    #menu-list a {
+        opacity: 1;
+    }
+    nav ul a:hover::after {
+        display: none;
     }
 }
